@@ -144,6 +144,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #4863: distutils.mwerkscompiler has been removed.
+
 - Fix and properly document the multiprocessing module's logging
   support, expose the internal levels and provide proper usage
   examples.
